# geosections

./: .buildinfo  .gitignore  README.md  changelog.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  user_guide.html
.doctrees/: changelog.doctree  environment.pickle  index.doctree  user_guide.doctree
.doctrees/user_guide/: cli.doctree  configuration.doctree  options.doctree
.github/workflows/: ci.yml  docs.yml
_sources/: changelog.md.txt  index.md.txt
_sources/user_guide/: cli.md.txt  configuration.md.txt  options.md.txt
docs/: changelog.md  conf.py  index.md  user_guide.md
docs/user_guide/: cli.md  configuration.md  options.md
src/geosections/: __init__.py  base.py  cli.py  plot.py  plotting.py  read.py  utils.py  validation.py
tests/: conftest.py  test_base.py
tests/files/: test.toml
user_guide/: cli.html  configuration.html  options.html
